--- a/index.html
+++ b/index.html
@@ -5,8 +5,43 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Calculator</title>
         <link href="styles.css" rel="stylesheet" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <script src="script.js"></script>
+        <div id="card">
+            <div id="display">090</div>
+            <div id="buttons">
+                <div class="button-row">
+                    <div class="button">7</div>
+                    <div class="button">8</div>
+                    <div class="button">9</div>
+                    <div class="button">+</div>
+                </div>
+                <div class="button-row">
+                    <div class="button">4</div>
+                    <div class="button">5</div>
+                    <div class="button">6</div>
+                    <div class="button">-</div>
+                </div>
+                <div class="button-row">
+                    <div class="button">1</div>
+                    <div class="button">2</div>
+                    <div class="button">3</div>
+                    <div class="button">*</div>
+                </div>
+                <div class="button-row">
+                    <div id="clear" class="button">C</div>
+                    <div class="button">0</div>
+                    <div class="button">=</div>
+                    <div class="button">/</div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
