--- a/index.html
+++ b/index.html
@@ -13,33 +13,33 @@
         />
     </head>
     <body>
-        <script src="script.js"></script>
+        <script src="script.js" defer></script>
         <div id="card">
-            <div id="display">090</div>
+            <div id="display">0</div>
             <div id="buttons">
                 <div class="button-row">
-                    <div class="button">7</div>
-                    <div class="button">8</div>
-                    <div class="button">9</div>
-                    <div class="button">+</div>
+                    <div class="button number">7</div>
+                    <div class="button number">8</div>
+                    <div class="button number">9</div>
+                    <div class="button operator">+</div>
                 </div>
                 <div class="button-row">
-                    <div class="button">4</div>
-                    <div class="button">5</div>
-                    <div class="button">6</div>
-                    <div class="button">-</div>
+                    <div class="button number">4</div>
+                    <div class="button number">5</div>
+                    <div class="button number">6</div>
+                    <div class="button operator">-</div>
                 </div>
                 <div class="button-row">
-                    <div class="button">1</div>
-                    <div class="button">2</div>
-                    <div class="button">3</div>
-                    <div class="button">*</div>
+                    <div class="button number">1</div>
+                    <div class="button number">2</div>
+                    <div class="button number">3</div>
+                    <div class="button operator">*</div>
                 </div>
                 <div class="button-row">
                     <div id="clear" class="button">C</div>
-                    <div class="button">0</div>
-                    <div class="button">=</div>
-                    <div class="button">/</div>
+                    <div class="button number">0</div>
+                    <div id="equal" class="button">=</div>
+                    <div class="button operator">/</div>
                 </div>
             </div>
         </div>
