--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="button number">1</div>
                     <div class="button number">2</div>
                     <div class="button number">3</div>
-                    <div class="button operator">*</div>
+                    <div class="button operator">x</div>
                 </div>
                 <div class="button-row">
                     <div id="clear" class="button">C</div>
